tests/NormalTests/paczka1/fuzzy1/29464152.err
Error in line 4: tYy5qzu3 S512 50,9
Error in line 17: UcEpMF S512 60,6
Error in line 18: UcEpMF S470 9,9
Error in line 30: UcEpMF A361 78,3
Error in line 32: tYy5qzu3 A361 401,5
